wdt-pmp-test/wdt-pmp-test-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wdt-pmp-service
  namespace: wdt-pmp-test
spec:
  selector:
    app: wdt-pmp-java
  ports:
  - port: 17000
    targetPort: 17000
