wdt-pmp-test/wdt-pmp-test-static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wdt-pmp-static-service
  namespace: wdt-pmp-test
spec:
  ports:
    - port: 80
  selector:
    app: wdt-pmp-static
